# temporal-rust-example

./: Cargo.toml
client/: Cargo.toml
client/src/: client.rs  main.rs
worker/: Cargo.toml
worker/src/: main.rs
