[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core.git" }
temporal-client = { git = "https://github.com/temporalio/sdk-core.git" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core.git" }
prost = "0.11.6"
serde_json = "1.0.96"
uuid = "1.3.1"
