[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
temporal-sdk = { git = "https://github.com/temporalio/sdk-core.git" }
temporal-sdk-core = { git = "https://github.com/temporalio/sdk-core.git" }
temporal-sdk-core-api = { git = "https://github.com/temporalio/sdk-core.git" }
temporal-sdk-core-protos = { git = "https://github.com/temporalio/sdk-core.git" }
tokio = "1.27.0"
